Fix alignment of input fields

--- a/dev/demo_page/demo.css
+++ b/dev/demo_page/demo.css
@@ -51,6 +51,7 @@ input, textarea {
   padding: 4px 6px;
   background: #fff;
   color: #444;
+  display: block;
 }
 
 input:focus, textarea:focus {
